# Rem

./: .env.example  .gitignore  README.md  bot  pyproject.toml
src/: bot.py  db.py  handlers.py  utils.py
