[project]
name = "rem"
version = "0.1.0"
description = "✉️ Reminder bot for Telegram"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.14.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
ignore = ["F403"]
